Fixed page action visibility for 133 (#14)

--- a/remove_megabar.css
+++ b/remove_megabar.css
@@ -59,6 +59,7 @@
     /* DISABLED BY DEFAULT - UNCOMMENT TO ENABLE */
     /*#pageActionButton {
         display: block !important;
+        visibility: visible !important;
     }*/
     /* ALWAYS SHOW PAGE ACTIONS END */
 }
